--- a/Allegro Website/templates/about.html
+++ b/Allegro Website/templates/about.html
@@ -37,7 +37,7 @@
       Allegro Services Inc has been authorised as the dealer  to sell armouring vehicles of INKAS Canada since 2025.
     </p>
     <div class="about-image-card3">
-      <img src="{{ url_for('static', filename='images/inkas.jpg') }}" alt="About Allegro Export">
+      <img src="{{ url_for('static', filename='images/inkas.png') }}" alt="About Allegro Export">
     </div>
 
     <!-- Add more story, timeline, or company values here -->
