--- a/Allegro Website/templates/about.html
+++ b/Allegro Website/templates/about.html
@@ -41,6 +41,13 @@
     </div>
 
     <!-- Add more story, timeline, or company values here -->
+    <p class="omvic_text"><strong>Allegro Export is proudly OMVIC-registered.</strong>  
+      We are legally authorized under the Ontario Motor Vehicle Dealers Act as a certified Exporter. Our registration follows strict guidelines to ensure transparency, consumer protection, and full compliance with Canadian vehicle export regulations.</p>
+
+    <div class="about-logo">
+      <img src="{{ url_for('static', filename='images/omvic-logo.svg') }}" alt="OMVIC Registered Exporter">
+    </div>
+    
   </section>
 
 </body>
