--- a/Allegro Website/templates/index.html
+++ b/Allegro Website/templates/index.html
@@ -80,7 +80,7 @@
       <p class="footer-location">📍 655 Dixon Road, Etobicoke, ON, M9W 1J3 Canada</p>
 
       <div class="footer-socials">
-        <a href="https://wa.me/11234567890" target="_blank">WhatsApp</a>
+        <a href="https://www.instagram.com/allegro_export/" target="_blank">Instagram</a>
         <a href="https://www.linkedin.com/in/umid‑akhmedov‑93142741/" target="_blank">LinkedIn</a>
       </div>
 
